// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddMaintenanceForm calls onFormSubmit when form is submitted 1`] = `
<div>
  <div
    class="bg-white shadow-lg rounded-lg p-6 border border-gray-100 custom-card-style"
  >
    <form
      role="form"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div
          class="space-y-4 bg-gray-50 p-5 rounded-lg shadow-sm"
        >
          <h3
            class="text-lg font-medium text-dark mb-4 border-b border-gray-200 pb-2"
          >
            Maintenance Details
          </h3>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-date"
            >
              Date
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-date-input"
              id="input-date"
              name="date"
              required=""
              type="date"
              value="2025-05-25"
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-description"
            >
              Description
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-description-input"
              id="input-description"
              name="description"
              required=""
              type="text"
              value="Oil Change"
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-cost"
            >
              Cost
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-cost-input"
              id="input-cost"
              min="0"
              name="cost"
              required=""
              type="number"
              value="50"
            />
          </div>
        </div>
        <div
          class="space-y-4 bg-gray-50 p-5 rounded-lg shadow-sm"
        >
          <h3
            class="text-lg font-medium mb-4 border-b border-gray-200 pb-2"
          >
            Additional Information
          </h3>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-mileage"
            >
              Mileage
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-mileage-input"
              id="input-mileage"
              min="0"
              name="mileage"
              required=""
              type="number"
              value="5000"
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-serviceCenter"
            >
              Service Center
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-service-center-input"
              id="input-serviceCenter"
              name="serviceCenter"
              type="text"
              value="Test Center"
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-notes"
            >
              Notes
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-notes-input"
              id="input-notes"
              name="notes"
              type="text"
              value="Test Notes"
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-nextDueDate"
            >
              Next Due Date
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-next-due-date-input"
              id="input-nextDueDate"
              name="nextDueDate"
              required=""
              type="date"
              value="2025-06-25"
            />
          </div>
        </div>
      </div>
      <div
        class="mt-8 flex justify-end space-x-3"
      >
        <button
          class="inline-flex items-center justify-center px-4 py-2 rounded font-semibold focus:outline-none transition disabled:opacity-60 w-auto hover:opacity-90 focus:ring-2 focus:ring-offset-2 focus:ring-primary"
          style="color: rgb(255, 255, 255);"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`AddMaintenanceForm renders fields and submit button 1`] = `
<div>
  <div
    class="bg-white shadow-lg rounded-lg p-6 border border-gray-100 custom-card-style"
  >
    <form
      role="form"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div
          class="space-y-4 bg-gray-50 p-5 rounded-lg shadow-sm"
        >
          <h3
            class="text-lg font-medium text-dark mb-4 border-b border-gray-200 pb-2"
          >
            Maintenance Details
          </h3>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-date"
            >
              Date
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-date-input"
              id="input-date"
              name="date"
              required=""
              type="date"
              value="2025-05-25"
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-description"
            >
              Description
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-description-input"
              id="input-description"
              name="description"
              required=""
              type="text"
              value="Oil Change"
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-cost"
            >
              Cost
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-cost-input"
              id="input-cost"
              min="0"
              name="cost"
              required=""
              type="number"
              value="50"
            />
          </div>
        </div>
        <div
          class="space-y-4 bg-gray-50 p-5 rounded-lg shadow-sm"
        >
          <h3
            class="text-lg font-medium mb-4 border-b border-gray-200 pb-2"
          >
            Additional Information
          </h3>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-mileage"
            >
              Mileage
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-mileage-input"
              id="input-mileage"
              min="0"
              name="mileage"
              required=""
              type="number"
              value="5000"
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-serviceCenter"
            >
              Service Center
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-service-center-input"
              id="input-serviceCenter"
              name="serviceCenter"
              type="text"
              value="Test Center"
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-notes"
            >
              Notes
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-notes-input"
              id="input-notes"
              name="notes"
              type="text"
              value="Test Notes"
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-nextDueDate"
            >
              Next Due Date
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-next-due-date-input"
              id="input-nextDueDate"
              name="nextDueDate"
              required=""
              type="date"
              value="2025-06-25"
            />
          </div>
        </div>
      </div>
      <div
        class="mt-8 flex justify-end space-x-3"
      >
        <button
          class="inline-flex items-center justify-center px-4 py-2 rounded font-semibold focus:outline-none transition disabled:opacity-60 w-auto hover:opacity-90 focus:ring-2 focus:ring-offset-2 focus:ring-primary"
          style="color: rgb(255, 255, 255);"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`AddMaintenanceForm shows form errors when present 1`] = `
<div>
  <div
    class="bg-white shadow-lg rounded-lg p-6 border border-gray-100 custom-card-style"
  >
    <form
      role="form"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-6"
      >
        <div
          class="space-y-4 bg-gray-50 p-5 rounded-lg shadow-sm"
        >
          <h3
            class="text-lg font-medium text-dark mb-4 border-b border-gray-200 pb-2"
          >
            Maintenance Details
          </h3>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-date"
            >
              Date
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 
  border-red-300 focus:ring-red-500 focus:border-red-500
"
              data-testid="maintenance-date-input"
              id="input-date"
              name="date"
              required=""
              type="date"
              value="2025-05-25"
            />
            <p
              class="mt-1 text-sm text-red-600"
            >
              Date is required
            </p>
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-description"
            >
              Description
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 
  border-red-300 focus:ring-red-500 focus:border-red-500
"
              data-testid="maintenance-description-input"
              id="input-description"
              name="description"
              required=""
              type="text"
              value="Oil Change"
            />
            <p
              class="mt-1 text-sm text-red-600"
            >
              Description is required
            </p>
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-cost"
            >
              Cost
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-cost-input"
              id="input-cost"
              min="0"
              name="cost"
              required=""
              type="number"
              value="50"
            />
          </div>
        </div>
        <div
          class="space-y-4 bg-gray-50 p-5 rounded-lg shadow-sm"
        >
          <h3
            class="text-lg font-medium mb-4 border-b border-gray-200 pb-2"
          >
            Additional Information
          </h3>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-mileage"
            >
              Mileage
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-mileage-input"
              id="input-mileage"
              min="0"
              name="mileage"
              required=""
              type="number"
              value="5000"
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-serviceCenter"
            >
              Service Center
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-service-center-input"
              id="input-serviceCenter"
              name="serviceCenter"
              type="text"
              value="Test Center"
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-notes"
            >
              Notes
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-notes-input"
              id="input-notes"
              name="notes"
              type="text"
              value="Test Notes"
            />
          </div>
          <div
            class="mb-4"
          >
            <label
              class="
  block text-sm font-medium text-gray-700 mb-1
"
              for="input-nextDueDate"
            >
              Next Due Date
              <span
                class="text-red-600 ml-1"
              >
                *
              </span>
            </label>
            <input
              class="
  block w-full rounded-md shadow-sm px-3 py-2
  border-gray-300 focus:ring-indigo-500 focus:border-indigo-500
 "
              data-testid="maintenance-next-due-date-input"
              id="input-nextDueDate"
              name="nextDueDate"
              required=""
              type="date"
              value="2025-06-25"
            />
          </div>
        </div>
      </div>
      <div
        class="mt-8 flex justify-end space-x-3"
      >
        <button
          class="inline-flex items-center justify-center px-4 py-2 rounded font-semibold focus:outline-none transition disabled:opacity-60 w-auto hover:opacity-90 focus:ring-2 focus:ring-offset-2 focus:ring-primary"
          style="color: rgb(255, 255, 255);"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
